--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -24,6 +25,7 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "canvas-confetti": "^1.9.3",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
@@ -35,13 +37,13 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-tag-input-component": "^2.0.2",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "redux-logger": "^3.0.6",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -55,6 +57,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^15.9.0",
