--- a/package.json
+++ b/package.json
@@ -39,17 +39,17 @@
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
     "react-tag-input-component": "^2.0.2",
-    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "redux-logger": "^3.0.6",
     "styled-components": "^6.1.12",
+    "sweetalert2": "^11.13.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/lodash": "^4.17.7",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
