--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/reactstrap": "^8.7.2",
+    "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
@@ -39,9 +40,10 @@
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
     "react-tag-input-component": "^2.0.2",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "redux-logger": "^3.0.6",
-    "styled-components": "^6.1.12",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.13.3",
     "yup": "^1.4.0"
   },
