--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
@@ -45,6 +46,7 @@
     "redux-logger": "^3.0.6",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.13.3",
+    "sweetalert2-react-content": "^5.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
