--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@material-tailwind/react": "^2.1.9",
-    "@mui/material": "^5.16.6",
+    "@mui/material": "^5.16.7",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/reactstrap": "^8.7.2",
     "@types/styled-components": "^5.1.34",
