--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@types/reactstrap": "^8.7.2",
     "@types/styled-components": "^5.1.34",
+    "@zegocloud/zego-uikit-prebuilt": "^2.10.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
@@ -46,6 +47,7 @@
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "redux-logger": "^3.0.6",
+    "rrule": "^2.8.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.13.3",
     "sweetalert2-react-content": "^5.0.7",
