--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.3.21",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-chartjs-2": "^5.2.0",
